@@ -1,5 +1,5 @@
 #
-# Sccsid @(#)heirloom-doctools.spec	1.12 (gritter) 10/16/05
+# Sccsid @(#)heirloom-doctools.spec	1.13 (gritter) 10/25/05
 #
 Summary: The Heirloom Documentation Tools.
 Name: heirloom-doctools
@@ -14,12 +14,14 @@ BuildRoot: %{_tmppath}/%{name}-root
 
 %define	bindir		/usr/ucb
 %define	mandir		/usr/share/man
-%define	docdir		/usr/ucblib/doctools
+%define	libdir		/usr/ucblib
+%define	docdir		%{libdir}/doctools
 %define	macdir		%{docdir}/tmac
 %define	fntdir		%{docdir}/font
 %define	tabdir		%{docdir}/nterm
 %define	hypdir		%{docdir}/hyphen
 %define	pstdir		%{docdir}/font/devpost/postscript
+%define	refdir		%{libdir}/reftools
 %define	pubdir		/usr/pub
 
 %define	xcc		gcc
@@ -30,7 +32,7 @@ BuildRoot: %{_tmppath}/%{name}-root
 #
 # Combine the settings defined above.
 #
-%define	makeflags	ROOT=%{buildroot} INSTALL=install YACC=%{yacc} MACDIR=%{macdir} FNTDIR=%{fntdir} TABDIR=%{tabdir} HYPDIR=%{hypdir} PUBDIR=%{pubdir} BINDIR=%{bindir} PSTDIR=%{pstdir} MANDIR=%{mandir} CC=%{xcc} CFLAGS=%{cflags} CPPFLAGS=%{cppflags}
+%define	makeflags	ROOT=%{buildroot} INSTALL=install YACC=%{yacc} MACDIR=%{macdir} FNTDIR=%{fntdir} TABDIR=%{tabdir} HYPDIR=%{hypdir} PUBDIR=%{pubdir} BINDIR=%{bindir} PSTDIR=%{pstdir} LIBDIR=%{libdir} REFDIR=%{refdir} MANDIR=%{mandir} CC=%{xcc} CFLAGS=%{cflags} CPPFLAGS=%{cppflags}
 
 %description
 The Heirloom Documentation Tools provide troff, nroff, and related
@@ -54,7 +56,8 @@ make %{makeflags}
 make %{makeflags} install
 
 rm -f filelist.rpm
-for f in %{bindir} %{macdir} %{fntdir} %{tabdir} %{hypdir} %{pstdir} %{pubdir}
+for f in %{bindir} %{macdir} %{fntdir} %{tabdir} %{hypdir} %{pstdir} %{pubdir} \
+	%{libdir} %{refdir}
 do
 	if test -d %{buildroot}/$f
 	then
